reservation creation API